# ds-store-no-more

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  review.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs
src/commands/: mod.rs  monitor.rs  run.rs
src/core/: cleaner.rs  mod.rs  patterns.rs
src/fs/: mock.rs  mod.rs  real.rs
src/models/: config.rs  mod.rs  result.rs
tests/: e2e_cli.rs  integration_scanner.rs
